# QREkaitza_App

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
QREkaitza/: CMakeLists.txt
QREkaitza/include/: mainwindow.h
QREkaitza/src/: mainwindow.cpp
QREkaitza/ui/: mainwindow.ui
QREkaitza_APP/: CMakeLists.txt
QREkaitza_APP/include/: mainwindow.h
QREkaitza_APP/src/: main.cpp  mainwindow.cpp
QREkaitza_APP/ui/: mainwindow.ui
